@@ -5,21 +5,19 @@
 package fr.fladajonesjones.MediaControler.activity;
 
 import android.os.Bundle;
-import android.os.Handler;
-import android.os.Message;
-import android.os.SystemClock;
 import android.support.v4.app.Fragment;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.View.OnClickListener;
 import android.view.ViewGroup;
-import android.widget.*;
-import android.widget.SeekBar.OnSeekBarChangeListener;
+import android.widget.Button;
+import android.widget.ImageView;
+import android.widget.ListView;
+import android.widget.TextView;
 
 import com.squareup.otto.Subscribe;
-
 import com.squareup.picasso.Picasso;
-import fr.fladajonesjones.MediaControler.Application;
+
 import fr.fladajonesjones.MediaControler.R;
 import fr.fladajonesjones.MediaControler.adapter.PisteRawAdapter;
 import fr.fladajonesjones.MediaControler.events.NowPlayingSeekEvent;
@@ -27,7 +25,6 @@ import fr.fladajonesjones.MediaControler.events.UpnpRendererMetaChangeEvent;
 import fr.fladajonesjones.MediaControler.upnp.UpnpRendererDevice;
 import fr.fladajonesjones.media.model.Album;
 import fr.flagadajones.media.util.BusManager;
-import fr.flagadajones.media.util.StringUtils;
 import fr.flagadajones.widget.holocircleseekbar.HoloCircleSeekBar;
 
 /**
@@ -40,43 +37,23 @@ public class NowPlayingFragment extends Fragment {
     // Track, album, and artist name
     private TextView mTrackName, mAlbumArtistName;
 
-    // Total and current time
-    private TextView mTotalTime, mCurrentTime;
-
     // Album art
     private ImageView mAlbumArt;
 
     // Controls
-    private ImageView mPlay;
 
     private Button mPrev, mNext;
+    private Button mPause, mStop;
+    private boolean pause = false;
 
     private HoloCircleSeekBar mSeekbar;
     private ListView listePiste;
     private PisteRawAdapter adapter = null;
-    // Progress
-    private SeekBar mProgress;
-
-    // Where we are in the track
-    private long mDuration, mLastSeekEventTime, mPosOverride = -1, mStartSeekPos = 0;
-
-    private boolean mFromTouch, paused = false;
-
-    // Handler
-    private static final int REFRESH = 1;// , UPDATEINFO = 2;
-
-    // Notify if repeat or shuffle changes
-    private Toast mToast;
 
     public NowPlayingFragment() {
         super();
 
     }
-
-    // public NowPlayingFragment(UpnpRendererDevice renderer) {
-    // super();
-    // this.renderer = renderer;
-    // }
 
     @Override
     public void onResume() {
@@ -103,97 +80,110 @@ public class NowPlayingFragment extends Fragment {
 
         listePiste = (ListView) root.findViewById(R.id.pisteListe);
 
-        adapter = new PisteRawAdapter(this.getActivity(),renderer);
+        adapter = new PisteRawAdapter(this.getActivity(), renderer);
         listePiste.setAdapter(adapter);
         mPrev = (Button) root.findViewById(R.id.ButtonPrev);
         mPrev.setOnClickListener(new OnClickListener() {
             @Override
             public void onClick(View view) {
-                renderer.seekPiste(renderer.positionInfo.getTrack().getValue().intValue()-1);
+                renderer.seekPiste(renderer.positionInfo.getTrack().getValue().intValue() - 1);
             }
         });
         mNext = (Button) root.findViewById(R.id.ButtonNext);
         mNext.setOnClickListener(new OnClickListener() {
             @Override
             public void onClick(View view) {
-                renderer.seekPiste(renderer.positionInfo.getTrack().getValue().intValue()+1);
+                renderer.seekPiste(renderer.positionInfo.getTrack().getValue().intValue() + 1);
             }
         });
 
+        mPause = (Button) root.findViewById(R.id.ButtonPause);
+        mPause.setOnClickListener(new OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                if (pause) {
+                    renderer.pause();
+                } else {
+                    renderer.play();
+                }
+                pause = !pause;
 
-                                mSeekbar=(HoloCircleSeekBar) root.findViewById(R.id.Position);
+            }
+        });
+        mStop = (Button) root.findViewById(R.id.ButtonStop);
+        mStop.setOnClickListener(new OnClickListener() {
+            @Override
+            public void onClick(View view) {
+                renderer.stop();
+
+            }
+        });
+
+        mSeekbar = (HoloCircleSeekBar) root.findViewById(R.id.Position);
 
         mSeekbar.setOnClickListener(new OnClickListener() {
             @Override
             public void onClick(View view) {
-                if(renderer.playing)
-                renderer.pause();
+                if (renderer.playing)
+                    renderer.pause();
                 else
                     renderer.play();
             }
         });
-
-
 
         updateUI();
         return root;
     }
 
     @Subscribe
-    public void onNowPlayingSeekEvent(NowPlayingSeekEvent event){
-        if(NowPlayingSeekEvent.TRACK_NB==event.seekType){
+    public void onNowPlayingSeekEvent(NowPlayingSeekEvent event) {
+        if (NowPlayingSeekEvent.TRACK_NB == event.seekType) {
             renderer.seekPiste(event.pos);
         }
     }
 
-
     @Subscribe
     public void onMetaChange(UpnpRendererMetaChangeEvent event) {
-                      if (event.renderer==this.renderer){
+        if (event.renderer == this.renderer) {
 
+            getActivity().runOnUiThread(new Runnable() {
+                @Override
+                public void run() {
+                    updateUI();
+                }
+            });
 
-                              getActivity().runOnUiThread(new Runnable() {
-                                  @Override
-                                  public void run() {
-                                      updateUI();
-                                  }
-                              });
+        }
+    }
 
-                          }
-                      }
-
-
-    public void updateUI(){
+    public void updateUI() {
 
         mTrackName.setText(renderer.getMusique().titre);
-        //mAlbumArtistNamerenderer=renderer.getMusique().titre;
+        // mAlbumArtistNamerenderer=renderer.getMusique().titre;
         Picasso.with(getActivity()).load(renderer.getMusique().albumArt).placeholder(R.drawable.stub)
                 .error(R.drawable.bg_img_notfound).into(mAlbumArt);
 
-
         // Application.imageLoader.DisplayImage(renderer.getMusique().albumArt, mAlbumArt);
 
-        if(renderer.positionInfo!=null){
-            mSeekbar.setMax(new Long(renderer.positionInfo.getTrackDurationSeconds()).intValue());
+        if (renderer.positionInfo != null) {
+            mSeekbar.setMax(Long.valueOf(renderer.positionInfo.getTrackDurationSeconds()).intValue());
             mSeekbar.setProgress(renderer.positionInfo.getRelCount());
-        }
-        else{
+        } else {
             mSeekbar.setMax(100);
             mSeekbar.setProgress(0);
 
         }
 
         adapter.clear();
-        if(renderer.getMusique() instanceof Album){
-        adapter.addAll(((Album)renderer.getMusique()).getPistes());
-        listePiste.setSelection(renderer.positionInfo.getTrack().getValue().intValue());
-        listePiste.setSelected(true);
+        if (renderer.getMusique() instanceof Album) {
+            adapter.addAll(((Album) renderer.getMusique()).getPistes());
+            listePiste.setSelection(renderer.positionInfo.getTrack().getValue().intValue());
+            listePiste.setSelected(true);
             listePiste.setVisibility(View.VISIBLE);
-        }else{
+        } else {
             listePiste.setVisibility(View.INVISIBLE);
         }
     }
-
 
     @Override
     public void onStart() {
@@ -203,7 +193,6 @@ public class NowPlayingFragment extends Fragment {
     @Override
     public void onDestroy() {
         super.onDestroy();
-        paused = true;
     }
 
 }
